--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ reqwest = "0.12.12"
 bytes = "1.0"
 stylance = { version = "0.5.4", features = ["nightly"] }
 chrono = { version = "0.4.39", features = ["serde"] }
+web-sys = "0.3.77"
 
 [workspace]
 members = ["src-tauri"]
