--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,7 +23,7 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-diesel = { version = "2.2.7", features = ["sqlite"] }
+diesel = { version = "2.2.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
 rusqlite = { version = "0.33.0", features = ["bundled"] }
 tauri-plugin-shell = "2"
 chrono = { version = "0.4.39", features = ["serde"] }
