--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,12 +1,10 @@
-name: Rust
+name: Release
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    tags:
+      - 'v*'  # Triggers when a tag like v1.0.0 is pushed
   workflow_dispatch:
-
 env:
   CARGO_TERM_COLOR: always
 
@@ -19,9 +17,60 @@ jobs:
     - uses: actions/checkout@v4
     - name: install tauri
       run: | 
+          rustup default nightly
           cargo install tauri-cli
           cargo install stylance-cli
           rustup target add wasm32-unknown-unknown
           cargo install trunk
     - name: Build
       run: cargo tauri build --verbose
+
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: release-artifacts
+        path: target/release/bundle/msi/*
+
+
+  mac:
+
+    runs-on: macos-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: install tauri
+      run: | 
+          rustup default nightly
+          cargo install tauri-cli
+          cargo install stylance-cli
+          rustup target add wasm32-unknown-unknown
+          cargo install trunk
+    - name: Build
+      run: cargo tauri build --verbose
+
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: release-artifacts
+        path: target/release/bundle/dmg/*.dmg
+
+  release:
+    needs: [windows, mac]
+    runs-on: macos-latest
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: release-artifacts
+          path: artifacts
+
+      - name: Create GitHub Release
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "artifacts/*"
+          tag: ${{ github.ref_name }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          name: "Release ${{ github.ref_name }}"
+          body: "Automated release of ${{ github.ref_name }}"
+          draft: true
+          prerelease: false
