--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,3 +29,6 @@ rusqlite = { version = "0.33.0", features = ["bundled"] }
 tauri-plugin-shell = "2"
 chrono = { version = "0.4.39", features = ["serde"] }
 tauri-plugin-dialog = "2"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-updater = "2"
