added updater compatible with CI/CD Noice

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,9 +28,7 @@ jobs:
       - name: 'Create env file'
         if: matrix.platform == 'windows-latest'
         shell: "cmd"
-        run: |
-          echo YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY }} > .env
-          cat .env
+        run: echo YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY }} > .env
 
       - name: 'Create env file'
         if: matrix.platform == 'macos-latest'
