--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,19 +35,14 @@ jobs:
         shell: "bash"
         run: echo YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY }} > .env
 
+      - name: fix path macOS
+        if: matrix.platform == 'macos-latest'
+        run: export PATH="/usr/local/bin:~/.cargo/bin:/usr/bin:$PATH"
+        
       - name: install Rust nightly
-        if: matrix.platform == 'windows-latest'
         run: |
           rustup toolchain install nightly
           rustup default nightly
-          
-      - name: install Rust nightly
-        if: matrix.platform == 'macos-latest'
-        uses: dtolnay/rust-toolchain@nightly
-        with:
-          # Those targets are only used on macos runners so it's in an `if` to slightly speed up windows and linux builds.
-          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
-
 
       - name: Add wasm32-unknown-unknown
         run: rustup target add wasm32-unknown-unknown
