add conditional env file creation for Windows and macOS in CI workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,15 @@ jobs:
     environment: .env
     steps:
       - uses: actions/checkout@v4
+      
       - name: 'Create env file'
+        if: matrix.platform == 'windows-latest'
+        shell: "cmd"
+        run: echo YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY }} > .env
+
+      - name: 'Create env file'
+        if: matrix.platform == 'macos-latest'
+        shell: "bash"
         run: echo YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY }} > .env
         
       - name: install Rust nightly
