--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "workout-app"
-version = "0.1.1"
+version = "0.1.2"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -23,7 +23,10 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-diesel = { version = "2.2.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
+diesel = { version = "2.2.7", features = [
+    "sqlite",
+    "returning_clauses_for_sqlite_3_35",
+] }
 diesel_migrations = "2.2.0"
 rusqlite = { version = "0.33.0", features = ["bundled"] }
 tauri-plugin-shell = "2"
