--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "workout-app-ui"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -18,11 +18,12 @@ reqwest = { version = "0.12.12", features = ["json"] }
 bytes = "1.0"
 stylance = { version = "0.5.5", features = ["nightly"] }
 chrono = { version = "0.4.40", features = ["serde"] }
-web-sys = "0.3.77"
+web-sys = { version = "0.3.77", features = ["CssStyleDeclaration", "HtmlElement", "HtmlDivElement"] }
 dotenvy = "0.15.7"
 dotenvy_macro = "0.15.7"
 iso8601-duration = "0.2.0"
 linked-hash-map = "0.5.6"
+async-std = "1.13.1"
 
 [workspace]
 members = ["src-tauri"]
