--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "workout-app"
-version = "0.2.1"
+version = "0.2.2"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -32,6 +32,10 @@ rusqlite = { version = "0.33.0", features = ["bundled"] }
 tauri-plugin-shell = "2"
 chrono = { version = "0.4.39", features = ["serde"] }
 tauri-plugin-dialog = "2"
+image = "0.25.6"
+uid = "0.1.8"
+uuid = "1.16.0"
+base64 = "0.22.1"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
