--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "workout-app"
-version = "0.2.4"
+version = "0.3.0"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -36,6 +36,10 @@ image = "0.25.6"
 uid = "0.1.8"
 uuid = "1.16.0"
 base64 = "0.22.1"
+reqwest = "0.12.15"
+futures-util = "0.3.31"
+tokio = { version = "1.44.2", features = ["full"] }
+semver = "1.0.26"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
